# CAROUSEL

./: .gitignore  .gitmodules  Doxyfile  LICENSE  README.md
Code/AMCore/: CMakeLists.txt  CMakeSettings.json  README.md  dynamic.txt  package.cmake
Code/AMCore/AMCore/: AMCore.cpp  AMCore.h  CMakeLists.txt
Code/AMCore/AMCore/include/: API_controll.h  HelpOptions.h  MenuOption_Main.h  Options.txt
Code/AMCore/AMCore/src/: API_controll.cpp  MenuOption_Main.cpp
Code/AMCore/AMGUI/windows/AMFramework/: .gitignore  AMFramework.sln  README.md
Code/AMCore/AMGUI/windows/AMFramework/AMControls/: AMControls.csproj  TestControl.cs
Code/AMCore/AMGUI/windows/AMFramework/AMControls_Test/: AMControls_Test.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
Code/AMCore/AMGUI/windows/AMFramework/AMFRamework_Components/: Class1.cs
Code/AMCore/AMGUI/windows/AMFramework/AMFramework/: AMFramework.csproj  AMFramework_g5xv3vbh_wpftmp.csproj  AMFramework_qayyjgqb_wpftmp.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindow_ViewModel.cs  lua.config  lua.luaproj
Code/AMCore/AMGUI/windows/AMFramework/AMFramework_ClassLibrary/: Class1.cs
Code/AMCore/AMGUI/windows/AMFramework/AMFramework_Excel/: AMFrameworkAddIn.Designer.cs  AMFrameworkAddIn.Designer.xml  AMFrameworkAddIn.cs  AMFramework_Excel.csproj  MainRibbon.Designer.cs  MainRibbon.cs
Code/AMCore/AMGUI/windows/AMFramework/AMFramework_Lib/: AMFramework_Lib.csproj
Code/AMCore/AMLib/: CMakeLists.txt  README.md
Code/AMCore/AMLib/exceptions/: CALPHADException.h  IPCPipeException.h
Code/AMCore/AMLib/include/: AM_Client.h  AM_Config.h  AM_Database.h  AM_Database_Datatable.h  AM_Database_Framework.h  AM_Database_TableStruct.h  AM_FileManagement.h  AM_Parameters.h  AM_Project.h  AM_Server.h  AM_Threading.h  AM_lua_interpreter.h  AM_pixel_layer.h  AM_pixel_object.h  AM_pixel_parameters.h  AM_ssh.h  IPCWindows.h
Code/AMCore/AMLib/include/Database_implementations/: CMake_DataTriggers_Builder.cmake  CMake_Database_Methods.cmake  CMake_Database_scheme_builder.cmake  Data_Controller.h  Database_Factory.h  Database_Sqlite3.h  Database_scheme_content.h  Database_scheme_content_V01.h  README.md  SQLite3_Tests.cpp
Code/AMCore/AMLib/include/Database_implementations/Data_stuctures/: DBS_ActivePhases.h  DBS_ActivePhases_Configuration.h  DBS_ActivePhases_ElementComposition.h  DBS_All_Structures_Header.h  DBS_CALPHADDatabase.h  DBS_Case.h  DBS_Element.h  DBS_ElementComposition.h  DBS_EquilibriumConfiguration.h  DBS_EquilibriumPhaseFractions.h  DBS_HeatTreatment.h  DBS_HeatTreatmentProfile.h  DBS_HeatTreatmentSegment.h  DBS_Phase.h  DBS_PrecipitateSimulationData.h  DBS_PrecipitationDomain.h  DBS_PrecipitationPhase.h  DBS_Project.h  DBS_ScheilConfiguration.h  DBS_ScheilCumulativeFraction.h  DBS_ScheilPhaseFraction.h  DBS_SelectedElements.h  DBS_SelectedPhases.h  ModelTemplate.h
Code/AMCore/AMLib/include/Database_implementations/Data_triggers/: DBSTrigger_ALL.h  DBSTrigger_ActivePhases.h  DBSTrigger_ActivePhases_Configuration.h  DBSTrigger_ActivePhases_ElementComposition.h  DBSTrigger_CALPHADDatabase.h  DBSTrigger_Case.h  DBSTrigger_Element.h  DBSTrigger_ElementComposition.h  DBSTrigger_EquilibriumConfiguration.h  DBSTrigger_EquilibriumPhaseFraction.h  DBSTrigger_HeatTreatment.h  DBSTrigger_HeatTreatmentProfile.h  DBSTrigger_HeatTreatmentSegment.h  DBSTrigger_Phase.h  DBSTrigger_PrecipitateSimulationData.h  DBSTrigger_Project.h  (+7 more)
Code/AMCore/AMLib/include/Extensions/: PhaseExtension.h
Code/AMCore/AMLib/include/Implementations/: ObservedObject.h  ObserverObject.h
Code/AMCore/AMLib/include/Modeling/: AM_Point.h  AM_Triangle.h
Code/AMCore/AMLib/include/callbackFunctions/: CallbackDefinitions.h  Callbacks.h  ErrorCallback.h  LogCallback.h  MessageCallBack.h  ProgressUpdateCallback.h  ScriptFinishedCallback.h
Code/AMCore/AMLib/include/lua/: LuaBase.h  LuaDatabaseModule.h
Code/AMCore/AMLib/interfaces/: IAM_API.h  IAM_Calculation.h  IAM_Command.h  IAM_Communication.h  IAM_DBS.h  IAM_DBSTrigger.h  IAM_Database.h  IAM_Observed.h  IAM_Observer.h  IAM_ThreadJob.h  IAM_lua_functions.h  IIPCCommunication.h  IStrigify.h  ITextExtractor.h
Code/AMCore/AMLib/src/: AM_Config.cpp  AM_Database.cpp  AM_Database_Datatable.cpp  AM_Database_Framework.cpp  AM_FileManagement.cpp  AM_Project.cpp  AM_Server.cpp  AM_lua_interpreter.cpp  AM_pixel_parameters.cpp
Code/AMCore/AMLib/src/Database_implementations/: Database_Sqlite3.cpp
Code/AMCore/AMLib/src/callbackAPI/: Callback.cpp
Code/AMCore/AMLib/x_Helpers/: IPC_pipe.h  IPC_winapi.h  string_manipulators.h
Code/AMCore/AMModels/: CMakeLists.txt  modelSchema.xsd
Code/AMCore/AMModels/include/: ModelTemplate.h  modelSchema.cpp  modelSchema.h
Code/AMCore/AMTests/: CMakeLists.txt  README.md
Code/AMCore/AMTests/AMLib/: CMakeLists.txt  CMake_SQLite_Tests_Generator.cmake
Code/AMCore/AMTests/AMLib/Test_resources/: pigeon.binvox  pigeon.stl
Code/AMCore/AMTests/AMLib/Tests/: AM_Config_Test.cpp  AM_DatabaseTriggers_Test.cpp  AM_Database_TableStruct_Test.cpp  AM_Database_Test.cpp  AM_FileManagement_Test.cpp  AM_IPC_Test.cpp  AM_Modeling_Test.cpp  AM_Threading_Test.cpp  AM_lua_Test.cpp  AM_lua_script_Test.cpp  AM_pixel_parameters_Test.cpp  AM_project_Test.cpp  AM_ssh_Test.cpp  DataController_Test.cpp
Code/AMCore/AMTests/MatCalc_API/: CMakeLists.txt
Code/AMCore/AMTests/MatCalc_API/Tests/: API_Phases.cpp  API_Test_setup.h  API_extensions_Test.cpp  API_extractors.cpp  API_lua_functions_Test.cpp  API_lua_script_test.cpp
Code/AMCore/AM_API_lib/: CMakeLists.txt  README.md
Code/AMCore/AM_API_lib/matcalc/: AM_API_Matcalc.cpp  AM_API_Matcalc.h  CMakeLists.txt
Code/AMCore/AM_API_lib/matcalc/include/: API_CommunicationFactory.h  API_lua_functions.h  API_matcalc_definitions.h  API_matcalc_lib.h  API_matcalc_scriptInterpreter.h  API_scripting.h  CalculationsThreadJob.h  dll_import.h  mc_defines.h  mc_types.h  shared_types.h
Code/AMCore/AM_API_lib/matcalc/src/: API_lua_functions.cpp  API_matcalc_lib.cpp
Code/AMCore/AM_API_lib/matcalc/x_Functional_scripts/: store_buffer_values.mcs
(+555 files in other folders)
